examples/test/testpolicy16459.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16459
  namespace: namespace0
spec:
  podSelector:
    matchLabels:
      key3: value30
      key46: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value31
      podSelector:
        matchLabels:
          key32: value20
          key8: value2
          key28: value28
